# ai-langchain-samples

./: .gitignore  lang-hf.py  pyproject.toml
App/: chat_ai.py  gui-app.py  index.html  script.js  style.css
NLP/: Langchain_basics.ipynb  langchain-parser.ipynb  nlp-text-processing.ipynb
prompts/: lang-hf.py  messages-stream.py  messages.py
